// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components|Forms/TextArea default 1`] = `
<div
  style={
    Object {
      "margin": "30px",
    }
  }
>
  <div
    style={
      Object {
        "maxWidth": "500px",
      }
    }
  >
    <div
      className="input-field"
    >
      <textarea
        className="input-field__input input-field__input--full-width input-field__input--no-resize"
        onChange={[Function]}
        placeholder="My text area"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots components|Forms/TextArea fixed width 1`] = `
<div
  style={
    Object {
      "margin": "30px",
    }
  }
>
  <div
    style={
      Object {
        "maxWidth": "500px",
      }
    }
  >
    <div
      className="input-field"
      style={
        Object {
          "width": "200px",
        }
      }
    >
      <textarea
        className="input-field__input input-field__input--no-resize"
        onChange={[Function]}
        placeholder="My text area"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots components|Forms/TextArea with error 1`] = `
<div
  style={
    Object {
      "margin": "30px",
    }
  }
>
  <div
    style={
      Object {
        "maxWidth": "500px",
      }
    }
  >
    <div
      className="input-field"
    >
      <span
        className="input-field__error"
      >
        This text area is required
      </span>
      <textarea
        className="input-field__input input-field__input--full-width input-field__input--error input-field__input--no-resize"
        onChange={[Function]}
        placeholder="My text area"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots components|Forms/TextArea without placeholder 1`] = `
<div
  style={
    Object {
      "margin": "30px",
    }
  }
>
  <div
    style={
      Object {
        "maxWidth": "500px",
      }
    }
  >
    <div
      className="input-field"
    >
      <textarea
        className="input-field__input input-field__input--full-width input-field__input--no-resize"
        onChange={[Function]}
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;
